exports[`getDataSchema/json-schema - generates schema for simple query 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "query SimpleQuery",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "hello": {
      "title": "Query.hello: String",
      "type": [
        "string",
        "null"
      ]
    },
    "count": {
      "title": "Query.count: Int",
      "type": [
        "integer",
        "null"
      ]
    }
  },
  "required": [
    "__typename"
  ],
  "$defs": {}
}
`;

exports[`getDataSchema/json-schema - handles __typename field 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "query WithTypename",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "user": {
      "title": "User",
      "type": "object",
      "properties": {
        "__typename": {
          "const": "User"
        },
        "id": {
          "title": "User.id: Int!",
          "type": "integer"
        },
        "name": {
          "title": "User.name: String!",
          "type": "string"
        }
      },
      "required": [
        "__typename",
        "id",
        "name"
      ]
    }
  },
  "required": [
    "__typename",
    "user"
  ],
  "$defs": {}
}
`;

exports[`getDataSchema/json-schema - handles all scalar types 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "query AllScalars",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "string": {
      "title": "Query.string: String!",
      "type": "string"
    },
    "int": {
      "title": "Query.int: Int!",
      "type": "integer"
    },
    "float": {
      "title": "Query.float: Float!",
      "type": "number"
    },
    "boolean": {
      "title": "Query.boolean: Boolean!",
      "type": "boolean"
    },
    "id": {
      "title": "Query.id: ID!",
      "type": "string"
    }
  },
  "required": [
    "__typename",
    "string",
    "int",
    "float",
    "boolean",
    "id"
  ],
  "$defs": {}
}
`;

exports[`getDataSchema/json-schema - handles arrays 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "query ArrayTest",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "strings": {
      "title": "Query.strings: [String!]!",
      "type": "array",
      "items": {
        "type": "string"
      }
    },
    "nullableStrings": {
      "title": "Query.nullableStrings: [String]",
      "type": [
        "array",
        "null"
      ],
      "items": {
        "type": [
          "string",
          "null"
        ]
      }
    },
    "matrix": {
      "title": "Query.matrix: [[Int!]!]!",
      "type": "array",
      "items": {
        "type": "array",
        "items": {
          "type": "integer"
        }
      }
    },
    "deeplyNested": {
      "title": "Query.deeplyNested: [[[String!]!]!]!",
      "type": "array",
      "items": {
        "type": "array",
        "items": {
          "type": "array",
          "items": {
            "type": "string"
          }
        }
      }
    }
  },
  "required": [
    "__typename",
    "strings",
    "matrix",
    "deeplyNested"
  ],
  "$defs": {}
}
`;

exports[`getDataSchema/json-schema - handles field aliases 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "query AliasTest",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "currentUser": {
      "title": "User",
      "type": "object",
      "properties": {
        "__typename": {
          "const": "User"
        },
        "userId": {
          "title": "User.id: Int!",
          "type": "integer"
        },
        "userName": {
          "title": "User.name: String!",
          "type": "string"
        }
      },
      "required": [
        "__typename",
        "userId",
        "userName"
      ]
    },
    "recentPosts": {
      "title": "Query.posts: [Post!]!",
      "type": "array",
      "items": {
        "type": "object",
        "title": "Post",
        "properties": {
          "__typename": {
            "const": "Post"
          },
          "postId": {
            "title": "Post.id: Int!",
            "type": "integer"
          },
          "postTitle": {
            "title": "Post.title: String!",
            "type": "string"
          }
        },
        "required": [
          "__typename",
          "postId",
          "postTitle"
        ]
      }
    }
  },
  "required": [
    "__typename",
    "currentUser",
    "recentPosts"
  ],
  "$defs": {}
}
`;

exports[`getDataSchema/json-schema - handles mutations 1`] = `
{
  "create": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "type": "object",
    "title": "mutation CreateUser",
    "properties": {
      "__typename": {
        "const": "Mutation"
      },
      "createUser": {
        "title": "User",
        "type": "object",
        "properties": {
          "__typename": {
            "const": "User"
          },
          "id": {
            "title": "User.id: Int!",
            "type": "integer"
          },
          "name": {
            "title": "User.name: String!",
            "type": "string"
          },
          "email": {
            "title": "User.email: String!",
            "type": "string"
          }
        },
        "required": [
          "__typename",
          "id",
          "name",
          "email"
        ]
      }
    },
    "required": [
      "__typename",
      "createUser"
    ],
    "$defs": {}
  },
  "update": {
    "$schema": "https://json-schema.org/draft/2020-12/schema",
    "type": "object",
    "title": "mutation UpdateUser",
    "properties": {
      "__typename": {
        "const": "Mutation"
      },
      "updateUser": {
        "title": "User",
        "type": [
          "object",
          "null"
        ],
        "properties": {
          "__typename": {
            "const": "User"
          },
          "id": {
            "title": "User.id: Int!",
            "type": "integer"
          },
          "name": {
            "title": "User.name: String!",
            "type": "string"
          }
        },
        "required": [
          "__typename",
          "id",
          "name"
        ]
      }
    },
    "required": [
      "__typename"
    ],
    "$defs": {}
  }
}
`;

exports[`getDataSchema/json-schema - handles nested objects 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "query NestedObjects",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "user": {
      "title": "User",
      "type": "object",
      "properties": {
        "__typename": {
          "const": "User"
        },
        "id": {
          "title": "User.id: Int!",
          "type": "integer"
        },
        "name": {
          "title": "User.name: String!",
          "type": "string"
        },
        "profile": {
          "title": "Profile",
          "type": [
            "object",
            "null"
          ],
          "properties": {
            "__typename": {
              "const": "Profile"
            },
            "bio": {
              "title": "Profile.bio: String",
              "type": [
                "string",
                "null"
              ]
            },
            "avatar": {
              "title": "Profile.avatar: String!",
              "type": "string"
            },
            "settings": {
              "title": "Settings",
              "type": [
                "object",
                "null"
              ],
              "properties": {
                "__typename": {
                  "const": "Settings"
                },
                "theme": {
                  "title": "Settings.theme: String!",
                  "type": "string"
                },
                "notifications": {
                  "title": "Settings.notifications: Boolean",
                  "type": [
                    "boolean",
                    "null"
                  ]
                }
              },
              "required": [
                "__typename",
                "theme"
              ]
            }
          },
          "required": [
            "__typename",
            "avatar"
          ]
        },
        "posts": {
          "title": "User.posts: [Post!]!",
          "type": "array",
          "items": {
            "type": "object",
            "title": "Post",
            "properties": {
              "__typename": {
                "const": "Post"
              },
              "id": {
                "title": "Post.id: Int!",
                "type": "integer"
              },
              "title": {
                "title": "Post.title: String!",
                "type": "string"
              },
              "tags": {
                "title": "Post.tags: [String!]",
                "type": [
                  "array",
                  "null"
                ],
                "items": {
                  "type": "string"
                }
              }
            },
            "required": [
              "__typename",
              "id",
              "title"
            ]
          }
        }
      },
      "required": [
        "__typename",
        "id",
        "name",
        "posts"
      ]
    }
  },
  "required": [
    "__typename",
    "user"
  ],
  "$defs": {}
}
`;

exports[`getDataSchema/json-schema - handles nullable vs non-nullable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "query NullabilityTest",
  "properties": {
    "__typename": {
      "const": "Query"
    },
    "required": {
      "title": "Query.required: String!",
      "type": "string"
    },
    "optional": {
      "title": "Query.optional: String",
      "type": [
        "string",
        "null"
      ]
    },
    "requiredInt": {
      "title": "Query.requiredInt: Int!",
      "type": "integer"
    },
    "optionalInt": {
      "title": "Query.optionalInt: Int",
      "type": [
        "integer",
        "null"
      ]
    }
  },
  "required": [
    "__typename",
    "required",
    "requiredInt"
  ],
  "$defs": {}
}
`;

exports[`getDataSchema/json-schema - handles subscriptions 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "title": "subscription OnMessage",
  "properties": {
    "__typename": {
      "const": "Subscription"
    },
    "messageAdded": {
      "title": "Message",
      "type": "object",
      "properties": {
        "__typename": {
          "const": "Message"
        },
        "id": {
          "title": "Message.id: Int!",
          "type": "integer"
        },
        "content": {
          "title": "Message.content: String!",
          "type": "string"
        },
        "author": {
          "title": "User",
          "type": "object",
          "properties": {
            "__typename": {
              "const": "User"
            },
            "id": {
              "title": "User.id: Int!",
              "type": "integer"
            },
            "name": {
              "title": "User.name: String!",
              "type": "string"
            }
          },
          "required": [
            "__typename",
            "id",
            "name"
          ]
        }
      },
      "required": [
        "__typename",
        "id",
        "content",
        "author"
      ]
    },
    "counter": {
      "title": "Subscription.counter: Int!",
      "type": "integer"
    }
  },
  "required": [
    "__typename",
    "messageAdded",
    "counter"
  ],
  "$defs": {}
}
`;
